# spriter

./: .buildinfo  .coverage  .gitignore  AI_MANIFEST.md  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  DEVELOPMENT_RULES.html  KNOWLEDGE_REPORT.md  README.md  STATE.html  genindex.html  index.html  knowledge_snapshot.json  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  spriter.db
.doctrees/: CHANGELOG.doctree  CONTRIBUTING.doctree  DEVELOPMENT_RULES.doctree  STATE.doctree  environment.pickle  index.doctree
.doctrees/adr/: 0001-record-architecture-decisions.doctree  0002-use-clean-architecture.doctree  0003-storage-strategy.doctree  0004-authentication-strategy.doctree  README.doctree  template.doctree
.doctrees/api/: application.doctree  config.doctree  dependencies.doctree  domain.doctree  infrastructure.doctree  main.doctree  modules.doctree  presentation.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_hu.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  knowledge_compliance.yml  release.yml
_modules/: config.html  index.html
_modules/application/: dto.html
_modules/domain/: entities.html  ports.html  repositories.html
_sources/: CHANGELOG.md.txt  CONTRIBUTING.md.txt  DEVELOPMENT_RULES.md.txt  STATE.md.txt
_sources/adr/: 0004-authentication-strategy.md.txt
_sources/api/: application.rst.txt  infrastructure.rst.txt  modules.rst.txt
adr/: 0001-record-architecture-decisions.html  0002-use-clean-architecture.html  0003-storage-strategy.html  0004-authentication-strategy.html  README.html  template.html
alembic/: env.py
alembic/versions/: 39661cb9d589_add_is_public_to_spritemodel.py  48e4ac84df28_add_play_count_to_spritemodel.py  733d6fb2efe9_initial_migrations_sprites_versions.py
api/: application.html  config.html  dependencies.html  domain.html  infrastructure.html  main.html  modules.html  presentation.html
docs/: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_RULES.md  RULES.md  STATE.md  conf.py  index.rst  requirements.txt
docs/adr/: 0001-record-architecture-decisions.md  0002-use-clean-architecture.md  0003-storage-strategy.md  0005-use-uv-for-dependency-management.md  0006-global-error-handling.md  0007-structured-logging.md  README.md  template.md
docs/api/: domain.rst  presentation.rst
docs/historias/: HU-004-simulator-api.md  HU-005-api-robustness.md  HU-006-structured-logging.md  HU-008-public-flags.md  HU-009-analytics-service.md  HU-010-frame-browser.md  HU-011-animation-editor.md  TEMPLATE.md
scripts/: chk-ci.sh  generate_knowledge_snapshot.py  seed_demo_assets.py
src/: config.py  dependencies.py  logging_config.py  main.py
src/application/: analytics.py  dto.py  services.py
src/domain/: entities.py  exceptions.py  ports.py  repositories.py  simulator.py
src/infrastructure/: auth.py  database.py  memory_repo.py  models.py  repositories.py  storage.py
src/presentation/: analytics_router.py  routers.py  simulator_router.py
src/static/css/: styles.css
src/static/js/: main.js
src/static/js/application/: simulator_engine.js
src/static/js/components/: spriter-player.js
src/static/js/domain/: simulation.js
src/static/js/infrastructure/: canvas_renderer.js
src/static/js/services/: simulator_service.js  sprite_service.js
src/static/js/ui/: dashboard.js  editor.js
src/templates/: index.html  landing.html
tests/domain/: test_entities.py  test_simulator.py
tests/e2e/: test_frontend.py  test_user_journey.py
tests/integration/: test_db_repo.py
tests/knowledge/: test_ai_readiness.py  test_consistency.py  test_docs.py  test_manifest.py  test_state.py
tests/manual/: embed_test.html
tests/presentation/: test_analytics_api.py  test_api_robustness.py  test_simulator_api.py
tests/unit/: test_auth.py  test_sprite_service.py  test_sprite_service_slicing.py  test_storage.py
tests/unit/domain/: test_simulator_service.py
