[project]
name = "spriter"
version = "0.5.0"
description = "High-performance specialized repository for 2D sprites and animation sheets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.34.87",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "structlog>=25.5.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/application", 
    "src/domain", 
    "src/infrastructure", 
    "src/presentation", 
    "src/config.py", 
    "src/main.py", 
    "src/dependencies.py"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B008"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]  # Standard pytest matching
python_classes = ["Test*"]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "types-aiofiles>=25.1.0.20251011",
    "types-python-jose>=3.5.0.20250531",
    "types-requests>=2.32.4.20260107",
]

